--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "typewriter-effect": "^2.22.0"
